java_library(
    name = "core",
    visibility = ["//visibility:public"],
    exports = ["//api"],
)

java_library(
    name = "inprocess",
    visibility = ["//visibility:public"],
    exports = ["//inprocess"],
)

java_library(
    name = "internal",
    srcs = glob([
        "src/main/java/io/grpc/internal/*.java",
    ]),
    javacopts = ["-Xep:DoNotCall:OFF"],  # Remove once requiring Bazel 3.4.0+; allows non-final
    resources = glob([
        "src/bazel-internal/resources/**",
    ]),
    visibility = ["//:__subpackages__"],
    deps = [
        "//api",
        "//context",
        "@grpc_java_maven//:com_google_android_annotations",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_code_gson_gson",
        "@grpc_java_maven//:com_google_errorprone_error_prone_annotations",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:com_google_j2objc_j2objc_annotations",
        "@grpc_java_maven//:io_perfmark_perfmark_api",
        "@grpc_java_maven//:org_codehaus_mojo_animal_sniffer_annotations",
    ],
)

java_library(
    name = "util",
    visibility = ["//visibility:public"],
    exports = ["//util"],
)

# Mirrors the dependencies included in the artifact on Maven Central for usage
# with maven_install's override_targets. Should only be used as a dep for
# pre-compiled binaries on Maven Central.
java_library(
    name = "core_maven",
    visibility = ["//visibility:public"],
    exports = [
        ":internal",
        "//api",
        "//util",
    ],
)
