load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "core",
    visibility = ["//visibility:public"],
    exports = ["//api"],
)

java_library(
    name = "inprocess",
    visibility = ["//visibility:public"],
    exports = ["//inprocess"],
)

java_library(
    name = "internal",
    srcs = glob([
        "src/main/java/io/grpc/internal/*.java",
    ]),
    javacopts = ["-Xep:DoNotCall:OFF"],  # Remove once requiring Bazel 3.4.0+; allows non-final
    resources = glob([
        "src/bazel-internal/resources/**",
    ]),
    visibility = ["//:__subpackages__"],
    deps = [
        "//api",
        "//context",
        artifact(
            "com.google.code.gson:gson",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.android:annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.errorprone:error_prone_annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.perfmark:perfmark-api",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "org.codehaus.mojo:animal-sniffer-annotations",
            repository_name = "grpc_java_maven",
        ),
    ],
)

java_library(
    name = "util",
    visibility = ["//visibility:public"],
    exports = ["//util"],
)

# Mirrors the dependencies included in the artifact on Maven Central for usage
# with maven_install's override_targets. Should only be used as a dep for
# pre-compiled binaries on Maven Central.
java_library(
    name = "core_maven",
    visibility = ["//visibility:public"],
    exports = [
        ":internal",
        "//api",
        "//util",
    ],
)
