bazel_dep(name = "grpc-java", version = "1.79.1-SNAPSHOT", repo_name = "io_grpc_grpc_java")  # CURRENT_GRPC_VERSION
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "grpc-proto", version = "0.0.0-20240627-ec30f58", repo_name = "io_grpc_grpc_proto")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_jvm_external", version = "6.0")

# Do not use this override in your own MODULE.bazel. It is unnecessary when
# using a version from BCR. Be aware the gRPC Java team does not update the
# BCR for new releases, so you may need to create a PR for the BCR to add the
# version. To not use the BCR, you could use:
#
# git_override(
#    module_name = "grpc-java",
#    remote = "https://github.com/grpc/grpc-java.git",
#    tag = "v<VERSION>",
# )
local_path_override(
    module_name = "grpc-java",
    path = "..",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

maven.install(
    artifacts = [
        "com.google.api.grpc:grpc-google-cloud-pubsub-v1:0.1.24",
        "com.google.api.grpc:proto-google-cloud-pubsub-v1:0.1.24",
    ],
    repositories = ["https://repo.maven.apache.org/maven2/"],
    strict_visibility = True,
)
