load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "googleapis",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//alts",
        "//api",
        "//core:internal",
        "//xds",
        artifact("com.google.guava:guava"),
    ],
)
