load("//:java_grpc_library.bzl", "java_grpc_library")

java_library(
    name = "grpclb",
    srcs = glob([
        "src/main/java/io/grpc/grpclb/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":load_balancer_java_grpc",
        "//api",
        "//core:internal",
        "//core:util",
        "//stub",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
        "@com_google_j2objc_j2objc_annotations//jar",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_proto//:grpclb_load_balancer_java_proto",
    ],
)

java_grpc_library(
    name = "load_balancer_java_grpc",
    srcs = ["@io_grpc_grpc_proto//:grpclb_load_balancer_proto"],
    deps = ["@io_grpc_grpc_proto//:grpclb_load_balancer_java_proto"],
)
