load("//:java_grpc_library.bzl", "java_grpc_library")

java_library(
    name = "grpclb",
    srcs = glob([
        "src/main/java/io/grpc/grpclb/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":load_balancer_java_grpc",
        "//api",
        "//context",
        "//core:internal",
        "//stub",
        "//util",
        "@com_google_protobuf//:protobuf_java_util",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:com_google_j2objc_j2objc_annotations",
        "@io_grpc_grpc_proto//:grpclb_load_balancer_java_proto",
    ],
)

java_grpc_library(
    name = "load_balancer_java_grpc",
    srcs = ["@io_grpc_grpc_proto//:grpclb_load_balancer_proto"],
    deps = ["@io_grpc_grpc_proto//:grpclb_load_balancer_java_proto"],
)
