java_library(
    name = "inprocess",
    srcs = glob([
        "src/main/java/io/grpc/inprocess/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "//core:internal",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_errorprone_error_prone_annotations",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:com_google_j2objc_j2objc_annotations",
    ],
)
