load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "inprocess",
    srcs = glob([
        "src/main/java/io/grpc/inprocess/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "//core:internal",
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.errorprone:error_prone_annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
    ],
)
