load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "inprocess",
    srcs = glob([
        "src/main/java/io/grpc/inprocess/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//context",
        "//core:internal",
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.errorprone:error_prone_annotations"),
        artifact("com.google.guava:guava"),
    ],
)
