load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "netty",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.errorprone:error_prone_annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-buffer",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-codec",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-codec-http",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-codec-http2",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-codec-socks",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-common",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-handler",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-handler-proxy",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-resolver",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-transport",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.netty:netty-transport-native-unix-common",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.perfmark:perfmark-api",
            repository_name = "grpc_java_maven",
        ),
    ],
)

# Mirrors the dependencies included in the artifact on Maven Central for usage
# with maven_install's override_targets. Should only be used as a dep for
# pre-compiled binaries on Maven Central.
#
# Not actually shaded; libraries should not be referencing unstable APIs so
# there should not be any references to the shaded package.
java_library(
    name = "shaded_maven",
    visibility = ["//visibility:public"],
    runtime_deps = ["//netty/shaded"],
)
