java_library(
    name = "okhttp",
    srcs = glob([
        "third_party/okhttp/main/java/**/*.java",
        "src/main/java/**/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        "//util",
        "@grpc_java_maven//:com_google_code_findbugs_jsr305",
        "@grpc_java_maven//:com_google_errorprone_error_prone_annotations",
        "@grpc_java_maven//:com_google_guava_guava",
        "@grpc_java_maven//:com_google_j2objc_j2objc_annotations",
        "@grpc_java_maven//:com_squareup_okhttp_okhttp",
        "@grpc_java_maven//:com_squareup_okio_okio",
        "@grpc_java_maven//:io_perfmark_perfmark_api",
    ],
)
