load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "okhttp",
    srcs = glob([
        "third_party/okhttp/main/java/**/*.java",
        "src/main/java/**/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        "//util",
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.errorprone:error_prone_annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.j2objc:j2objc-annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.squareup.okhttp:okhttp",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.squareup.okio:okio",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "io.perfmark:perfmark-api",
            repository_name = "grpc_java_maven",
        ),
    ],
)
