load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "okhttp",
    srcs = glob([
        "third_party/okhttp/main/java/**/*.java",
        "src/main/java/**/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//core:internal",
        "//util",
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.errorprone:error_prone_annotations"),
        artifact("com.google.guava:guava"),
        artifact("com.squareup.okhttp:okhttp"),
        artifact("com.squareup.okio:okio"),
        artifact("io.perfmark:perfmark-api"),
    ],
)
