load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "protobuf",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//protobuf-lite",
        "@com_google_protobuf//:protobuf_java",
        artifact("com.google.api.grpc:proto-google-common-protos"),
        artifact("com.google.code.findbugs:jsr305"),
        artifact("com.google.guava:guava"),
    ],
)
