load("@rules_jvm_external//:defs.bzl", "artifact")
load("//:java_grpc_library.bzl", "java_grpc_library")

java_library(
    name = "rls",
    srcs = glob([
        "src/main/java/io/grpc/rls/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":rls_java_grpc",
        "//:auto_value_annotations",
        "//api",
        "//core",
        "//core:internal",
        "//stub",
        "//util",
        "@io_grpc_grpc_proto//:rls_config_java_proto",
        "@io_grpc_grpc_proto//:rls_java_proto",
        artifact(
            "com.google.auto.value:auto-value-annotations",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.code.findbugs:jsr305",
            repository_name = "grpc_java_maven",
        ),
        artifact(
            "com.google.guava:guava",
            repository_name = "grpc_java_maven",
        ),
    ],
)

java_grpc_library(
    name = "rls_java_grpc",
    srcs = ["@io_grpc_grpc_proto//:rls_proto"],
    deps = ["@io_grpc_grpc_proto//:rls_java_proto"],
)
